syntax = "proto3";

package ova.account.api;

import "google/protobuf/empty.proto";

option go_package = "github.com/ozonva/ova-account-api/pkg/ova-account-api;ova_account_api";


service AccountService {
    rpc DescribeAccount(DescribeAccountRequest) returns (DescribeAccountResponse) {}
    rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse) {}
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
    rpc RemoveAccount(RemoveAccountRequest) returns (google.protobuf.Empty) {}
}

// Account is the protobuf response of the entity.Account.
message Account {
    uint64 id = 1;
    uint64 user_id = 2;
    string value = 3;
}

message DescribeAccountResponse {
    Account account = 1;
}

message ListAccountsResponse {
    repeated Account accounts = 1;
}

message DescribeAccountRequest {
    uint64 id = 1;
}

message RemoveAccountRequest {
    uint64 id = 1;
}

message CreateAccountRequest {
    string value = 2;
}

message CreateAccountResponse {
    Account account = 1;
}

message ListAccountsRequest {
    uint64 user_id = 1;
    uint64 limit = 2;
    uint64 offset = 3;
}
